Bug 168884 - EMF object transparency lost (regression between 25.8.1.1 and 25.8.2.2)
Summary: EMF object transparency lost (regression between 25.8.1.1 and 25.8.2.2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
25.8.2.2 release
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:26.2.0 target:25.8.3 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: EMF-WMF 168886
  Show dependency treegraph
 
Reported: 2025-10-16 09:14 UTC by Piotr Osada
Modified: 2025-10-25 07:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example EMF (15.95 KB, image/x-emf)
2025-10-16 09:14 UTC, Piotr Osada
Details
Comparison of LO24.2.7.2, 25.8.1.1 and 25.8.2.2 (1.05 MB, image/png)
2025-10-16 09:40 UTC, Piotr Osada
Details
Description PDF (3.28 MB, application/pdf)
2025-10-16 09:42 UTC, Piotr Osada
Details
Origin file (27.82 KB, application/octet-stream)
2025-10-16 09:48 UTC, Piotr Osada
Details
Origin Viewer (EULA) (https://www.originlab.com/viewer/) (9.30 KB, text/plain)
2025-10-16 09:59 UTC, Piotr Osada
Details
Origin file (OPJ) (open with e.g. LabPlot) (31.36 KB, application/octet-stream)
2025-10-16 10:07 UTC, Piotr Osada
Details
Example EMF (extracted from Word *.docx.zip) (31.55 KB, image/x-emf)
2025-10-16 13:17 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Osada 2025-10-16 09:14:53 UTC
Created attachment 203351 [details]
Example EMF

Steps:
1) Insert attached Example EMF into LO25.8.2.2 (Writer, Impress, Calc).

Result:
A white rectangle appears as the background for the-value-labels on the bars.

Expected:
Transparent background.

In 25.8.1.1 and 24.2.7.2, the graph displays correctly.



Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded

Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
Comment 1 Piotr Osada 2025-10-16 09:40:41 UTC
Created attachment 203353 [details]
Comparison of LO24.2.7.2, 25.8.1.1 and 25.8.2.2
Comment 2 Piotr Osada 2025-10-16 09:42:04 UTC
Created attachment 203354 [details]
Description PDF
Comment 3 Piotr Osada 2025-10-16 09:48:35 UTC
Created attachment 203355 [details]
Origin file

About OriginLab's software
https://en.wikipedia.org/wiki/Origin_(data_analysis_software)
Comment 4 Piotr Osada 2025-10-16 09:59:05 UTC
Created attachment 203356 [details]
Origin Viewer (EULA) (https://www.originlab.com/viewer/)

Origin Viewer can be downloaded from the below website:

https://www.originlab.com/viewer/
Comment 5 Piotr Osada 2025-10-16 10:07:07 UTC
Created attachment 203357 [details]
Origin file (OPJ) (open with e.g. LabPlot)

For curiosity purposes: *.OPJ files can be opened in the LabPlot.

https://labplot.org/
Comment 6 Piotr Osada 2025-10-16 13:17:55 UTC
Created attachment 203370 [details]
Example EMF (extracted from Word *.docx.zip)

First attachment 203351 [details]: Example EMF was extracted from LibreOffice saved *.docx.zip archive.
Comment 7 raal 2025-10-16 15:52:46 UTC
No repro with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Seems to be fixed with dev version. Please could you test it with
dev version?  You can download it here:
http://dev-builds.libreoffice.org/daily/master/
Thank you
Comment 8 Piotr Osada 2025-10-16 15:58:47 UTC
(In reply to raal from comment #7)
> Please could you test it with dev version?

LOdev 2025-10-13_03.28.43 also shows white background.

Reproduced in:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d60ff8c8bd4e3ebf8f84f53448ead3c838332ea9
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
Comment 9 Saburo 2025-10-20 00:31:08 UTC
reproducible
Version: 25.8.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 6dacd3417222825e3bdfb1420fafcd4b2abe4eb5
CPU threads: 2; OS: Linux 6.16; UI render: default; VCL: kf5 (cairo+wayland)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

not reproduce
bibisect repo
Version: 25.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 91b8c95717f343a47170d0316d46c5707905b7fc
CPU threads: 2; OS: Linux 6.16; UI render: default; VCL: kf5 (cairo+wayland)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

why?
Comment 10 BogdanB 2025-10-20 04:29:34 UTC
(In reply to Saburo from comment #9)
> reproducible
> Version: 25.8.3.0.0+ (X86_64) / LibreOffice Community
> Build ID: 6dacd3417222825e3bdfb1420fafcd4b2abe4eb5
> CPU threads: 2; OS: Linux 6.16; UI render: default; VCL: kf5 (cairo+wayland)
> Locale: ja-JP (ja_JP.UTF-8); UI: en-US
> Calc: threaded
> 
> not reproduce
> bibisect repo
> Version: 25.8.2.0.0+ (X86_64) / LibreOffice Community
> Build ID: 91b8c95717f343a47170d0316d46c5707905b7fc
> CPU threads: 2; OS: Linux 6.16; UI render: default; VCL: kf5 (cairo+wayland)
> Locale: ja-JP (ja_JP.UTF-8); UI: en-US
> Calc: threaded
> 
> why?

Maybe was backported later in 25.8.2, and we dont have the latest changes, is very recent commit.
Comment 11 Saburo 2025-10-21 07:50:26 UTC
bibisected with linux-64-26.2 0befd5bdc874e98b49a5869fae817d15ecb74f61 is the first bad commit
    source 1bdf1e2d52a7fae3e1a58ddf15a7657df3d47004

commit 1bdf1e2d52a7fae3e1a58ddf15a7657df3d47004
author	Khaled Hosny <khaled@aliftype.com>	Thu Sep 25 16:33:09 2025 +0300

tdf#168371: Disable ligatures in Impress/Draw with character spacing

This is follow up to commit:

commit b9f0caad5d9e628f82d5148dfc7d2436d32817e2
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Tue Aug 23 04:13:28 2022 +0200

    tdf#66819: Disable ligatures with character spacing

Even though editengine was applying letter spacing, when drawing with
drawinglayer, letter spacing was not propagated which caused VCL to not
disable the ligature features.

Change-Id: Ia8bf2231478720262484a757e16fe5afec3cd28e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191512

adding CC: Khaled Hosny
Comment 12 Commit Notification 2025-10-21 12:17:04 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1dce54d8fb070d3d4134317612c145a923497bb4

tdf#168884: Restore missing transparency in EMF files

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Piotr Osada 2025-10-21 13:10:39 UTC
I would like to test, but it looks like there is something wrong with daily builds. Last one is from long ago (13.10.2025):


https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/

File Name  ↓ 	  File Size  ↓  Date  ↓ 
Parent directory/	-	-
2025-10-07_13.47.01/	-	2025-Oct-07 11:46
2025-10-08_03.30.27/	-	2025-Oct-08 01:30
2025-10-10_03.28.19/	-	2025-Oct-10 01:28
2025-10-11_03.29.22/	-	2025-Oct-11 01:29
2025-10-13_03.28.43/	-	2025-Oct-13 01:28
current/	        -	2025-Oct-13 01:28
Comment 14 Commit Notification 2025-10-21 13:33:15 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0704f03eca87491f87381a2fa995f1920bb19151

tdf#168884: Restore missing transparency in EMF files

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2025-10-21 14:19:22 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/1f47a94170ddbba1acfd01a6c13c3585c6bd8573

tdf#168884: Restore missing transparency in EMF files

It will be available in 25.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Piotr Osada 2025-10-22 16:41:53 UTC
With recent dev version, text box transparency is preserved.
Bug 168886 is still there.


https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb103-1-TDF/2025-10-22_15.51.57/

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
Comment 17 Commit Notification 2025-10-24 13:20:53 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-7":

https://git.libreoffice.org/core/commit/3e162e8ec1530966e6ba5cbe17a49a92a11430e1

tdf#168884: Restore missing transparency in EMF files

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.