drawinglayer/source/primitive2d/textbreakuphelper.cxx
@@ -179,7 +179,7 @@ namespace drawinglayer::primitive2d
                         mrSource.getFontAttribute(),
                         mrSource.getLocale(),
                         mrSource.getFontColor(),
-                        mrSource.getTextFillColor(),
+                        COL_TRANSPARENT,
                         mrSource.getLetterSpacing()));
             }
         }
